--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
     position: relative;
-    background-image: url('../../img/image_3.png');
+    background-image: url('../img/image_3.png');
     width: 100%;
     min-height: 200px;
     background-position: center;
