--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ html
   head
     title Index
     meta(name="viewport" content="width=device-width, initial-scale=1")
-  body
+  //body
     include blocks/checkbox/checkbox.pug
     include blocks/radio/radio.pug
     include blocks/toggle/toggle.pug
@@ -14,49 +14,12 @@ html
     include blocks/configuration-dropdown/configuration-dropdown.pug
 
     include blocks/header/header.pug 
-    +header()
+    //+header()
 
     .hero
       .hero__text
         | Лучшие номера для вашей работы, отдыха и просто вдохновения
 
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    br
-    h1
       | This one is the sub-section or widget title
     h2
       | Next one is the item title inside widgets
