--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -7,9 +7,57 @@ html
         img.logo(src="../img/logo.svg")
         .headers-footers
             .headers-footers__item.headers-footers__item--up
-                +header()
+                +header({
+                    isLogged: false, 
+                    buttons: {
+                        enter: 'Войти',
+                        register: 'Зарегистрироваться'
+                    },
+                    menu: [
+                        {
+                        text: 'Home',
+                        link: '#home',
+                        classes: ['menu__item', 'menu__item--current']
+                        },
+                        {
+                        text: 'About Us',
+                        link: '#about_us',
+                        classes: ['menu__item']
+                        }, 
+                        {
+                        text: 'Services',
+                        classes: ['menu__item', 'menu__submenu'],
+                        link: [
+                        {
+                            text: 'First',
+                            link: '#first',
+                            classes: ['submenu__item']
+                        },
+                        {
+                            text: 'Second',
+                            link: '#second',
+                            classes: ['submenu__item']
+                        }
+                        ]},
+                        {
+                        text: 'Careers',
+                        link: '#careers',
+                        classes: ['menu__item']
+                        },
+                        {
+                        text: 'News',
+                        link: '#news',
+                        classes: ['menu__item']
+                        },
+                        {
+                        text: 'Documentation',
+                        link: '#docs',
+                        classes: ['menu__item']
+                        }
+                    ]
+                    })
             .headers-footers__item
-                +header(true)
+                //+header({isLogged: true})
             .headers-footers__item.headers-footers__item--down
                 include ../../blocks/footer/footer.pug 
                 +footer()
