--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -4,7 +4,61 @@ html
     title Landing page
   body
     include ../../blocks/header/header.pug 
-    +header()
+    +header({
+      isLogged: false, 
+      buttons: {
+        enter: 'Войти',
+        register: 'Зарегистрироваться'
+      },
+      menu: [
+        {
+          text: 'О нас',
+          link: '#about_us',
+          classes: ['menu__item']
+        }, 
+        {
+          text: 'Услуги',
+          classes: ['menu__item', 'menu__submenu'],
+          link: [
+          {
+            text: 'First',
+            link: '#first',
+            classes: ['submenu__item']
+          },
+          {
+            text: 'Second',
+            link: '#second',
+            classes: ['submenu__item']
+          }
+        ]},
+        {
+          text: 'Вакансии',
+          link: '#careers',
+          classes: ['menu__item']
+        },
+        {
+          text: 'Новости',
+          link: '#news',
+          classes: ['menu__item']
+        },
+        {
+          text: 'Соглашения',
+          classes: ['menu__item', 'menu__submenu'],
+          link: [
+            {
+              text: 'First',
+              link: '#first',
+              classes: ['submenu__item']
+            },
+            {
+              text: 'Second',
+              link: '#second',
+              classes: ['submenu__item']
+            }
+          ]
+        }
+      ]
+    })
     include ../../blocks/hero/hero.pug
     +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
     .landing.landing__room-config
