change configuration dropdown

--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -47,6 +47,14 @@
         }
     }
 
+    &__footer-button {
+        visibility: visible;
+
+        &--hide {
+            visibility: hidden;
+        }
+    }
+
     &__item {
         display: flex;
         justify-content: space-between;
