--- a/src/blocks/configuration-dropdown/configuration-dropdown.pug
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.pug
@@ -1,3 +1,4 @@
+// rooms
 mixin dropdown(options = {})
     .configuration-dropdown
         if options.label !== undefined
@@ -22,7 +23,33 @@ mixin dropdown(options = {})
               .configuration-dropdown__button#badroom(data-id='badroom' data-type='dec') -
               .configuration-dropdown__counter#badroom_field 3
               .configuration-dropdown__button(data-id='badroom' data-type='inc') +
-          if options.isFooter !== undefined
-            .configuration-dropdown__footer
-                .simple-button.simple-button--disabled Очистить
-                .simple-button Применить
+
+
+// guests
+mixin guest-dropdown()
+  .configuration-dropdown
+    .configuration-dropdown__label Гостей
+    .configuration-dropdown__header#guest_header Сколько гостей
+    .configuration-dropdown__content.configuration-dropdown__content--hide
+      .configuration-dropdown__item#config_guest
+        .configuration-dropdown__option Взрослые
+        .configuration-dropdown__controlls
+          .configuration-dropdown__button.configuration-dropdown__button--disabled#guest(data-id='guest' data-type='dec') -
+          .configuration-dropdown__counter#guest_field 0
+          .configuration-dropdown__button(data-id='guest' data-type='inc') +
+      .configuration-dropdown__item
+        .configuration-dropdown__option Дети
+        .configuration-dropdown__controlls
+          .configuration-dropdown__button.configuration-dropdown__button--disabled#children(data-id='children' data-type='dec') -
+          .configuration-dropdown__counter#children_field 0
+          .configuration-dropdown__button(data-id='children' data-type='inc') +
+      .configuration-dropdown__item
+        .configuration-dropdown__option Младенцы
+        .configuration-dropdown__controlls
+          .configuration-dropdown__button.configuration-dropdown__button--disabled#baby(data-id='baby' data-type='dec') -
+          .configuration-dropdown__counter#baby_field 0
+          .configuration-dropdown__button(data-id='baby' data-type='inc') +
+      .configuration-dropdown__footer
+        .configuration-dropdown__footer-button.configuration-dropdown__footer-button--hide
+          .simple-button.simple-button--disabled#clear_guest Очистить
+        .simple-button#apply_guest Применить
