--- a/src/blocks/find-apartments-card/find-apartments-card.scss
+++ b/src/blocks/find-apartments-card/find-apartments-card.scss
@@ -2,15 +2,13 @@
     width: 380px;
     height: 374px;
 
-    &__content {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
+    &__item {
+        position: relative;
+        margin: 20px 0;
+        z-index: 3;
     }
 
-    &__dropdown {
-        position: relative;
-        z-index: 1;
+    &__button {
+        margin-top: 31px;
     }
 }
