--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,9 +1,22 @@
+@import '../../scss/sizes.scss';
+
 .landing {
-    width: 380px;
+    max-width: 1160px;
+    margin: 0 auto;
 
     &__room-config {
         position: absolute;
         top: 140px;
-        left: 7%;
+        left: calc(50% - 380px / 2);
+        z-index: 1;
+    }
+}
+
+@media screen and (min-width: $small-size) {
+    .landing {
+
+        &__room-config {
+            left: auto;
+        }
     }
 }
