--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -4,9 +4,10 @@ $dark-shade-50:    rgba(31, 32, 65, 0.5);
 $dark-shade-25:    rgba(31, 32, 65, 0.25);
 $dark-shade-10:    rgba(31, 32, 65, 0.1);
 $dark-shade-5:     rgba(31, 32, 65, 0.05);
-$purple:           #BC9CFF;
+$purple:           #bc9cff;
 $green:            #6FCF97;
 $white:            #FFFFFF;
 $black:            #000000;
 $gradient:         linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
+$gradient-25:      linear-gradient(180deg, hsla(259, 100%, 81%, 0.25) 0%, rgba(139, 165, 249, 0.25) 100%);
 $light-gradient:   linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
