added cards page

--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -107,6 +107,6 @@
         display: flex;
         justify-content: space-between;
         height: 40px;
-        padding-top: 4px;
+        padding: 16px 7px 0;
     }
 }
