--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -8,6 +8,7 @@ $purple:           #bc9cff;
 $green:            #6FCF97;
 $white:            #FFFFFF;
 $black:            #000000;
+$gray:             #F4F4F6;
 $gradient:         linear-gradient(180deg, $purple 0%, #8BA4F9 100%);
 $gradient-25:      linear-gradient(180deg, hsla(259, 100%, 81%, 0.25) 0%, rgba(139, 165, 249, 0.25) 100%);
 $light-gradient:   linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
