added booking card

--- a/src/blocks/configuration-dropdown/configuration-dropdown.pug
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.pug
@@ -28,7 +28,7 @@ mixin dropdown(options = {})
 // guests
 mixin guest-dropdown()
   .configuration-dropdown
-    .configuration-dropdown__label Гостей
+    .configuration-dropdown__label Гости
     .configuration-dropdown__header#guest_header Сколько гостей
     .configuration-dropdown__content.configuration-dropdown__content--hide
       .configuration-dropdown__item#config_guest
