--- a/src/blocks/invoice/invoice.pug
+++ b/src/blocks/invoice/invoice.pug
@@ -4,18 +4,12 @@ mixin invoice()
           .invoice__service 9 990&#8381; х 4 суток
           div 39 960&#8381;
         .invoice__row
-          .invoice__service Сбор за услуги: скидка 2 179&#8381;
-            .invoice__info
-                span.info i
+          .invoice__service.invoice__service--info Сбор за услуги: скидка 2 179&#8381;
           div 0&#8381;
         .invoice__row
-          .invoice__service Сбор за дополнительные услуги
-            .invoice__info
-                span.info i
+          .invoice__service.invoice__service--info Сбор за дополнительные услуги
           div 300&#8381;
         .invoice__row.invoice__row--total
-          div 
-            h2 Итого
+          h2.invoice__block Итого
           .invoice__line
-          div 
-            h2 38 081&#8381;
+          h2.invoice__block 38 081&#8381;
