--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -15,3 +15,5 @@ html
       +image-card('../img/apartments_1.png', true, 888, true, 9990, 5, 145)
       +image-card('../img/apartments_2.png', false, 840, false, 9990, 4, 65)
       #static-calendar
+      include ../../blocks/booking-card/booking-card 
+      +booking-card()
