--- a/src/blocks/image-card/image-card.pug
+++ b/src/blocks/image-card/image-card.pug
@@ -4,13 +4,11 @@ mixin image-card(image, arrows = true, apartment, lux = false, price, rating, co
         +gallery(image, arrows)
         .image-card__body
           .image-card__item.image-card__item--border
-            span.image-card--bold № 
-            h2= apartment 
-            if (lux)
-                span.image-card--lux  Люкс
+            include ../apartment-info/apartment-info 
+            +apartment-info({number: apartment, lux: lux})
           .image-card__item.image-card__item--right.image-card__item--border
-            b #{price}&#8381; 
-            span.image-card__s в сутки
+            include ../price/price 
+            +price(price)
           .image-card__item.image-card__item--rating
             include ../rating/rating
             +rating(rating)
