--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -5,15 +5,27 @@ html
   body
     img.logo(src="../img/logo.svg")
     .cards
-      include ../../blocks/find-apartments-card/find-apartments-card
-      +apartments()
-      include ../../blocks/register-card/register-card 
-      +register-card()
-      include ../../blocks/enter-card/enter-card 
-      +enter-card()
-      include ../../blocks/image-card/image-card 
-      +image-card('../img/apartments_1.png', true, 888, true, 9990, 5, 145)
-      +image-card('../img/apartments_2.png', false, 840, false, 9990, 4, 65)
-      #static-calendar
-      include ../../blocks/booking-card/booking-card 
-      +booking-card()
+      .cards__column
+        .cards__item
+          include ../../blocks/find-apartments-card/find-apartments-card
+          +apartments()
+        .cards__item
+          include ../../blocks/register-card/register-card 
+          +register-card()
+      .cards__column
+        .cards__item
+          include ../../blocks/booking-card/booking-card 
+          +booking-card()
+        .cards__item
+          include ../../blocks/enter-card/enter-card 
+          +enter-card()
+      .cards__column
+        .cards__item
+          #static-calendar
+        .cards__item
+          include ../../blocks/image-card/image-card 
+          +image-card('../img/apartments_1.png', true, 888, true, 9990, 5, 145)
+        .cards__item
+          +image-card('../img/apartments_2.png', false, 840, false, 9990, 4, 65)
+        
+      
