--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -5,12 +5,19 @@ body {
 }
 
 .cards {
-    max-width: 90%;
+    max-width: 86%;
     margin: 150px auto;
-    display: grid;
-    grid-gap: 40px;
+    display: flex;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-    grid-auto-flow: dense;
     align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+    &__column {
+        margin: 0 10px;
+    }
+
+    &__item {
+        margin-bottom: 40px;
+    }
 }
