--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -1,8 +1,15 @@
-mixin range-dates()
+mixin range-dates(data)
     .range-dates
-        label.range-dates__label Прибытие
+        label.range-dates__label.range-dates__label--small= data.firstLabel
           span.range-dates__wrapper
             input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")#first_date
-        label.range-dates__label Выезд
+        label.range-dates__label.range-dates__label--small= data.secondLabel
           span.range-dates__wrapper
             input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")#second_date
+
+
+mixin date-dropdown(data)
+  .range-dates
+    label.range-dates__label= data.label
+      span.range-dates__wrapper
+        input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ" value=data.date)
