--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -6,11 +6,13 @@
     background-image: $gradient;
     border-radius: 22px;
     padding: 8px 20px;
+    line-height: 24px;
     text-transform: uppercase;
     font-size: .75rem;
     font-weight: bold;
     cursor: pointer;
     user-select: none;
+    border: none;
 
     &--disabled {
         opacity: .5;
