--- a/src/blocks/like/like.pug
+++ b/src/blocks/like/like.pug
@@ -1,7 +1,7 @@
-mixin like(likes, liked=false)
-    if liked
-        .like.like--liked= likes
+mixin like(data)
+    if data.liked
+        .like.like--liked= data.likes
             i.like__icon.like__icon--liked favorite
     else
-        .like= likes
+        .like= data.likes
             i.like__icon favorite_border
