--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -3,14 +3,18 @@
 .range-dates {
     display: flex;
     justify-content: space-between;
-    width: 320px;
+    //width: 100%;
 
     &__label {
-        width: 150px;
+        width: 100%;
         font-family: 'Montserrat Bold';
         font-size: 12px;
         line-height: 15px;
         text-transform: uppercase;
+
+        &--small {
+            width: 150px;
+        }
     }
 
     &__wrapper {
