--- a/src/blocks/rounded-button/rounded-button.scss
+++ b/src/blocks/rounded-button/rounded-button.scss
@@ -5,7 +5,7 @@
     position: relative;
     color: $purple;
     border-radius: 22px;
-    padding: 4px 18px;
+    padding: 8px 18px;
     text-transform: uppercase;
     font-size: .75rem;
     line-height: 24px;
@@ -13,7 +13,7 @@
     cursor: pointer;
     user-select: none;
     background-color: $white;
-    margin: 2px;
+    //margin: 2px;
 
     &::after {
         display: inherit;
