--- a/src/blocks/text-field/text-field.scss
+++ b/src/blocks/text-field/text-field.scss
@@ -15,7 +15,7 @@
         color: $dark-shade-25;
     }
 
-    &:hover, &:focus {
+    &:hover, &:focus, &--focus {
         border-color: $dark-shade-50;
         color: $dark-shade-75;
 
