added registration page

--- a/src/blocks/hero/hero.pug
+++ b/src/blocks/hero/hero.pug
@@ -1,3 +1,6 @@
-mixin hero(text)
-  .hero
-    .hero__text= text
+mixin hero(data)
+  -var classes = ['hero']
+  if data.theme == 'secondary'
+    - classes.push('hero--img2')
+  div(class=classes) 
+    .hero__text= data.text
