--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -18,6 +18,7 @@ mixin register-card()
             include ../toggle/toggle
             +toggle('Получать спецпредложения')
           .register-card__block
+            include ../long-button/long-button
             +long-button('Перейти к оплате')
           .register-card__block.register-card__block--last
             include ../card-footer/card-footer
