add pages to readme

--- a/src/blocks/enter-card/enter-card.pug
+++ b/src/blocks/enter-card/enter-card.pug
@@ -1,5 +1,6 @@
 mixin enter-card()  
-    .card-canvas.enter-card
+  .enter-card
+    .card-canvas
       h1.enter-card__title Войти
       input.text-field.enter-card__field(type="text" placeholder="Email")
       input.text-field(type="password" placeholder="Пароль")
