--- a/src/pages/landing-layout/landing-layout.scss
+++ b/src/pages/landing-layout/landing-layout.scss
@@ -13,7 +13,7 @@
 }
 
 @media screen and (min-width: $small-size) {
-    .landing {
+    .landing-layout {
 
         &__room-config {
             left: auto;
