--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -1,70 +1,10 @@
-doctype html
-html
-  head
-    title Landing page
-  body
-    include ../../blocks/header/header.pug 
-    +header({
-      isLogged: false, 
-      buttons: {
-        enter: 'Войти',
-        register: 'Зарегистрироваться'
-      },
-      menu: [
-        {
-          text: 'О нас',
-          link: '#about_us',
-          classes: ['menu__item']
-        }, 
-        {
-          text: 'Услуги',
-          classes: ['menu__item', 'menu__submenu'],
-          link: [
-          {
-            text: 'First',
-            link: '#first',
-            classes: ['submenu__item']
-          },
-          {
-            text: 'Second',
-            link: '#second',
-            classes: ['submenu__item']
-          }
-        ]},
-        {
-          text: 'Вакансии',
-          link: '#careers',
-          classes: ['menu__item']
-        },
-        {
-          text: 'Новости',
-          link: '#news',
-          classes: ['menu__item']
-        },
-        {
-          text: 'Соглашения',
-          classes: ['menu__item', 'menu__submenu'],
-          link: [
-            {
-              text: 'First',
-              link: '#first',
-              classes: ['submenu__item']
-            },
-            {
-              text: 'Second',
-              link: '#second',
-              classes: ['submenu__item']
-            }
-          ]
-        }
-      ]
-    })
-    include ../../blocks/hero/hero.pug
-    +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
+extends ../landing-layout/landing-layout
 
-    .landing
-      .landing__room-config
-        include ../../blocks/find-apartments-card/find-apartments-card.pug 
-        +apartments()
-    include ../../blocks/footer/footer.pug 
-    +footer()
+block title
+  title Landing
+
+block card
+  .landing
+    .landing__room-config#dd
+      include ../../blocks/find-apartments-card/find-apartments-card.pug 
+      +apartments()
