--- a/src/pages/landing-layout/landing-layout.pug
+++ b/src/pages/landing-layout/landing-layout.pug
@@ -1,76 +1,14 @@
-doctype html
-html
-  head
-    block title
-      title Landing page
-  body
-    block header
-        include ../../blocks/header/header.pug 
-        +header({
-        isLogged: false, 
-        buttons: {
-            enter: 'Войти',
-            register: 'Зарегистрироваться'
-        },
-        menu: [
-            {
-            text: 'О нас',
-            link: '#about_us',
-            classes: ['menu__item']
-            }, 
-            {
-            text: 'Услуги',
-            classes: ['menu__item', 'menu__submenu'],
-            link: [
-            {
-                text: 'First',
-                link: '#first',
-                classes: ['submenu__item']
-            },
-            {
-                text: 'Second',
-                link: '#second',
-                classes: ['submenu__item']
-            }
-            ]},
-            {
-            text: 'Вакансии',
-            link: '#careers',
-            classes: ['menu__item']
-            },
-            {
-            text: 'Новости',
-            link: '#news',
-            classes: ['menu__item']
-            },
-            {
-            text: 'Соглашения',
-            classes: ['menu__item', 'menu__submenu'],
-            link: [
-                {
-                text: 'First',
-                link: '#first',
-                classes: ['submenu__item']
-                },
-                {
-                text: 'Second',
-                link: '#second',
-                classes: ['submenu__item']
-                }
-            ]
-            }
-        ]
-        })
+extends ../main-layout/main-layout
 
-    block hero
-      include ../../blocks/hero/hero.pug
-      +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
+block title
+  title Landing Layout
 
-    block card
-      .landing-layout
-        .landing-layout__room-config
-          
+block content
+  block hero
+    include ../../blocks/hero/hero.pug
+    +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
 
-    block footer
-      include ../../blocks/footer/footer.pug 
-      +footer()
+  block card
+    .landing-layout
+      .landing-layout__room-config
+        
