complete search room page

--- a/src/blocks/expander/expander.scss
+++ b/src/blocks/expander/expander.scss
@@ -7,6 +7,7 @@
         font-family: 'Montserrat Bold', Arial;
         font-size: .75rem;
         padding-bottom: 16px;
+        color: $dark-shade-100;
         cursor: pointer;
         user-select: none;
 
