--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -11,6 +11,7 @@
         font-size: 12px;
         line-height: 15px;
         text-transform: uppercase;
+        color: $dark-shade-100;
 
         &--small {
             width: 150px;
