--- a/src/blocks/configuration-dropdown/configuration-dropdown.scss
+++ b/src/blocks/configuration-dropdown/configuration-dropdown.scss
@@ -7,6 +7,7 @@
         text-transform: uppercase;
         font-family: 'Montserrat Bold';
         font-size: .75rem;
+        color: $dark-shade-100;
     }
 
     &__header {
