--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -4,6 +4,7 @@
 .header {
     width: 100%;
     position: relative;
+    box-shadow: 0px 10px 20px $dark-shade-5;
 
     &__container {
         display: flex;
