--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -65,5 +65,6 @@ html
     block content
 
     block footer
-      include ../../blocks/footer/footer.pug 
-      +footer()
+      .main-layout__footer
+        include ../../blocks/footer/footer.pug 
+        +footer()
