--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,48 +1,6 @@
 @import 'colors.scss';
 @import 'fonts.scss';
-@import 'sizes.scss';
-// @import '../blocks/checkbox/checkbox.scss';
-// @import '../blocks/radio/radio.scss';
-// @import '../blocks/toggle/toggle.scss';
-// @import '../blocks/button/button.scss';
-// @import '../blocks/rounded-button/rounded-button.scss';
-// @import '../blocks/simple-button/simple-button.scss';
-// @import '../blocks/long-button/long-button.scss';
-// @import '../blocks/like/like.scss';
-// @import '../blocks/text-field/text-field.scss';
-// @import '../blocks/card-canvas/card-canvas.scss';
-// @import '../blocks/enter-card/enter-card.scss';
-// @import '../blocks/rating/rating.scss';
-// @import '../blocks/expander/expander.scss';
-// @import '../blocks/bullet/bullet.scss';
-// @import '../blocks/configuration-dropdown/configuration-dropdown.scss';
-// @import '../blocks/additions/additions.scss';
-// @import '../blocks/avatar/avatar.scss';
-// @import '../blocks/comment/comment.scss';
-// @import '../blocks/pagination/pagination.scss';
-// @import '../blocks/subscription/subscription.scss';
-// @import '../blocks/color/color.scss';
-// @import '../blocks/palette/palette.scss';
-// @import '../blocks/type/type.scss';
-// @import '../blocks/color-types/color-types.scss';
-// @import '../blocks/logo/logo.scss';
-// @import 'datepicker/datepicker.scss';
-// @import '../blocks/range-dates/range-dates.scss';
-// @import '../blocks/find-apartments-card/find-apartments-card.scss';
-// @import '../blocks/register-card/register-card.scss';
-// @import '../blocks/card-footer/card-footer.scss';
-// @import '../blocks/invoice/invoice.scss';
-// @import '../blocks/info/info.scss';
-// @import '../blocks/gallery/gallery.scss';
-// @import '../blocks/image-card/image-card.scss';
-// @import '../blocks/menu/menu.scss';
-// @import '../blocks/light-footer/light-footer.scss';
-// @import '../blocks/site-logo/site-logo.scss';
-// @import '../blocks/socials/socials.scss';
-// @import '../blocks/footer/footer.scss';
-// @import '../blocks/header/header.scss';
-// @import '../blocks/menu-toggle/menu-toggle.scss';
-@import '../blocks/hero/hero.scss';
+
 
 :root {
     box-sizing: border-box;
@@ -62,15 +20,14 @@ body {
     line-height: 20px;
     padding: 0;
     margin: 0;
+    height: 100%;
+    position: relative;
 }
 
-.content {
-    width: 710px;
-    margin: 0 auto;
-}
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+    color: $dark-shade-100;
 }
 
 h1 {
@@ -107,24 +64,6 @@ h3 {
     word-wrap: normal;
     white-space: nowrap;
     direction: ltr;
-}
-
-.inv_cont {
-    width: 380px;
-    padding: 0 30px;
-}
-
-.gal_cont {
-    width: 271px;
-}
-
-img {
-    margin: 0;
-    padding: 0;
-}
-
-.menu_cont {
-    width: 80%;
 }
 
 a {
