--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -2,10 +2,10 @@ mixin range-dates(data)
     .range-dates
         label.range-dates__label.range-dates__label--small= data.firstLabel
           span.range-dates__wrapper
-            input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")#first_date
+            input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ" id=data.firstInputId)
         label.range-dates__label.range-dates__label--small= data.secondLabel
           span.range-dates__wrapper
-            input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")#second_date
+            input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ" id=data.secondInputId)
 
 
 mixin date-dropdown(data)
