--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -20,4 +20,10 @@ body {
     &__item {
         margin-bottom: 40px;
     }
+
+    &__logo {
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
 }
