--- a/src/blocks/additions/additions.scss
+++ b/src/blocks/additions/additions.scss
@@ -6,8 +6,11 @@
     border-width: 0 0 1px 0;
     border-style: solid;
     border-color: $dark-shade-10;
-    padding: 1.43em 0 1.43em 4.14em;
+    padding: 0 0 1.43em 4.14em;
 
+    &--no-border {
+        border: none;
+    }
 
     &__title {
         font-family: 'Montserrat Bold';
@@ -15,7 +18,7 @@
 
     &__icon {
         position: absolute;
-        top: .5em;
+        top: .1em;
         left: 0;
         font-family: 'Material Icons';
         font-size: 3.43em;
