--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -172,8 +172,8 @@ html
         .form-elements__item
           .form-elements__head.form-elements__head--accent
             .form-elements__title Range slider
-            ///////////////////////////////////
-            // slider
+          .form-elements__slider
+            input.slider
 
         .form-elements__item
           .form-elements__head.form-elements__head--accent
