--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -17,6 +17,11 @@ block content
       .search-room__sidebar-item
         #guest.search-room--index-100
       .search-room__sidebar-item
+        h3.search-room__sidebar-item-title Диапазон цен
+        .search-room__slider
+          input.slider
+          div Стоимость за сутки пребывания в номере
+      .search-room__sidebar-item
         h3.search-room__sidebar-item-title checkbox buttons
         +checkbox('Можно курить', false)
         +checkbox('Можно с питомцами', true)
