--- a/src/blocks/bullet/bullet.scss
+++ b/src/blocks/bullet/bullet.scss
@@ -14,6 +14,11 @@
         padding-left: 19px;
         padding-bottom: 14px;
 
+        &.bullet--small {
+            padding-bottom: 3px;
+            padding-left: 14px;
+        }
+
         &::before {
             content: '';
             position: absolute;
@@ -24,5 +29,21 @@
             background-color: $dark-shade-25;
             border-radius: 50%;
         }
+    }
+
+    &--excellent::before {
+        background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
+    }
+
+    &--good::before {
+        background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+    }
+
+    &--normal::before {
+        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    }
+
+    &--bad::before {
+        background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
     }
 }
