--- a/src/blocks/donut/donut.scss
+++ b/src/blocks/donut/donut.scss
@@ -1,5 +1,23 @@
+@import '../../scss/colors.scss';
+
 .donut {
-    &__good {
-        
+    position: relative;
+    width: 150px;
+    height: 150px;
+    color: $purple;
+    cursor: default;
+    text-align: center;
+
+    &__text {
+        position: absolute;
+        top: 50px;
+        left: 44px;
+        font-family: 'Montserrat Bold';
+        letter-spacing: .03rem;
+        line-height: 15px;
+    }
+
+    h1 {
+        color: $purple;
     }
 }
