fix bug with statistic

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -33,8 +33,16 @@ block content
             icon: 'whatshot',
             noBorder: true
         })
-      .room-details__room-item.bb
+      .room-details__room-item
         h2.room-details__title Впечатления от номера
+        .statistic
+          div(class="donut statistic__donut" data-donut='[{"value": 65, "color": "#BC9CFF", "bold": true}, {"value": 65, "color": "#6FCF97"}, {"value": 130, "color": "#FFE39C"}]')
+          
+          ul.bullet.statistic__list
+            li.bullet--excellent.bullet--small Великолепно
+            li.bullet--good.bullet--small Хорошо
+            li.bullet--normal.bullet--small Удовлетворительно
+            li.bullet--bad.bullet--small Разачарован
       .room-details__room-comments
         h2.room-details__title Отзывы посетителей номера
         include ../../blocks/comment/comment 
