--- a/src/blocks/statistic/statistic.scss
+++ b/src/blocks/statistic/statistic.scss
@@ -3,6 +3,7 @@
     
     &__donut {
         margin-right: 16px;
+        min-width: 150px;
     }
 
     &__list {
@@ -10,5 +11,4 @@
         padding-bottom: 10px;
     }
 
-    
 }
