bug fix with impage path on room-details page

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -48,14 +48,14 @@ block content
         include ../../blocks/comment/comment 
         .room-details__inner
             +comment({
-                image: '../../img/ava.jpg',
+                image: '../img/ava.jpg',
                 author: 'Мурад Сарафанов',
                 date: '5 дней назад',
                 like: { likes: 5, liked: true },
                 text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.'
             })
         +comment({
-            image: '../../img/ava.jpg',
+            image: '../img/ava.jpg',
             author: 'Патрисия Стёклышкова',
             date: 'Неделю назад',
             like: { likes: 2, liked: false },
