bug fix with imports

--- a/src/pages/landing-layout/landing-layout.pug
+++ b/src/pages/landing-layout/landing-layout.pug
@@ -6,7 +6,7 @@ block title
 block content
   block hero
     include ../../blocks/hero/hero.pug
-    +hero('Лучшие номера для вашей работы, отдыха и просто вдохновения')
+    +hero({text: 'Лучшие номера для вашей работы, отдыха и просто вдохновения'})
 
   block card
     .landing-layout
