--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -5,6 +5,6 @@ block title
 
 block card
   .landing
-    .landing__room-config#dd
+    .landing__room-config
       include ../../blocks/find-apartments-card/find-apartments-card.pug 
       +apartments()
