--- a/src/index.pug
+++ b/src/index.pug
@@ -4,5 +4,26 @@ html
     title Index
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
-    
-    
+    h1 UI Kit
+    ul
+      li
+        a(href="pages/colors-and-fonts.html") Colors & Fonts
+      li
+        a(href="pages/headers-footers.html") Headers & Footers
+      li
+        a(href="pages/cards.html") Cards
+      li
+        a(href="pages/form-elements.html") Form Elements
+
+    h1 Pages
+    ul
+      li
+        a(href="pages/landing.html") Langing
+      li
+        a(href="pages/registration.html") Registration
+      li
+        a(href="pages/sign-in.html") Sign In
+      li
+        a(href="pages/search-room.html") Search Room
+      li
+        a(href="pages/room-details.html") Room Details
