added meta tags keywords, description

--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -1,6 +1,11 @@
 doctype html
 html
   head
+    meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    block keywords
+      meta(name="keywords", content="fsd template")
+    block description
+      meta(name="description", content="this is the test project")
     block title
       title Main
   body
