--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -1,12 +1,12 @@
 mixin footer()
   footer.footer
     .footer__container
-      .footer__block
+      section.footer__block
         .site-logo
         p
         | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
         | eget nullam pellentesque aliquam curabitur cociis.
-      .footer__nav
+      section.footer__nav
         .footer__block__header
           h3 Navigation
         p
@@ -14,7 +14,7 @@ mixin footer()
           a.footer__link(href="#") News
           a.footer__link(href="#") Support
           a.footer__link(href="#") Products
-      .footer__nav
+      section.footer__nav
         .footer__block__header
           h3 About Us
         p
@@ -22,14 +22,14 @@ mixin footer()
           a.footer__link(href="#") Our team
           a.footer__link(href="#") Careers
           a.footer__link(href="#") Investors
-      .footer__nav
+      section.footer__nav
         .footer__block__header
           h3 Support
         p
           a.footer__link(href="#") Documentation
           a.footer__link(href="#") Community
           a.footer__link(href="#") Get in Touch
-      .footer__block
+      section.footer__block
         .footer__block__header
           h3 Subscribe to out newsletter
         p Receive our latest news and promotions in your inbox!
@@ -37,7 +37,7 @@ mixin footer()
           .subscription__item
           input.text-field(placeholder="Your email address")
     .footer__bottom
-      .footer__copy
+      section.footer__copy
         p Copyright © 2018 Toxin UI Kit. All rights reserved.
         include ../socials/socials.pug 
         +socials()
