--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
+    meta(name="viewport" content="initial-scale=1.0, width=device-width")
     block keywords
       meta(name="keywords", content="fsd template")
     block description
