--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -3,7 +3,7 @@ html
   head
     title Card Kit
   body
-    img.cards__logo(src="../img/logo.svg")
+    img.cards__logo(src="../img/logo.svg", alt="logo")
     .cards
       .cards__column
         .cards__item
