--- a/src/pages/colors-type/colors-and-fonts.pug
+++ b/src/pages/colors-type/colors-and-fonts.pug
@@ -4,7 +4,7 @@ html
     title Colors & Type
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
-    img.logo(src="../img/logo.svg")
+    img.logo(src="../img/logo.svg", alt="logo")
     .color-types
       .palette.color-types__pallete
         .color
