--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -3,7 +3,7 @@ html
   head
     title Form Elements
   body
-    img.logo(src="../img/logo.svg")
+    img.logo(src="../img/logo.svg", alt="logo")
     .form-elements
       .form-elements__left 
         .form-elements__item
