--- a/src/blocks/comment/comment.pug
+++ b/src/blocks/comment/comment.pug
@@ -1,6 +1,6 @@
 mixin comment(data)
   article.comment
-    img.avatar(src=data.image)
+    img.avatar(src=data.image alt="user avatar")
     div
       .comment__author= data.author
       .comment__date= data.date
