--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -4,7 +4,7 @@ html
     title Headers and Footer
   body
     include ../../blocks/header/header.pug
-    img.logo(src="../img/logo.svg")
+    img.logo(src="../img/logo.svg", alt="logo")
     .headers-footers
       .headers-footers__item.headers-footers__item--up
         +header({
