--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -10,25 +10,25 @@ mixin footer()
         .footer__block__header
           h3 Navigation
         p
-          a.footer__link(href="#") About Us
-          a.footer__link(href="#") News
-          a.footer__link(href="#") Support
-          a.footer__link(href="#") Products
+          a.footer__link(href="index.html") About Us
+          a.footer__link(href="index.html") News
+          a.footer__link(href="index.html") Support
+          a.footer__link(href="index.html") Products
       section.footer__nav
         .footer__block__header
           h3 About Us
         p
-          a.footer__link(href="#") Who we are
-          a.footer__link(href="#") Our team
-          a.footer__link(href="#") Careers
-          a.footer__link(href="#") Investors
+          a.footer__link(href="index.html") Who we are
+          a.footer__link(href="index.html") Our team
+          a.footer__link(href="index.html") Careers
+          a.footer__link(href="index.html") Investors
       section.footer__nav
         .footer__block__header
           h3 Support
         p
-          a.footer__link(href="#") Documentation
-          a.footer__link(href="#") Community
-          a.footer__link(href="#") Get in Touch
+          a.footer__link(href="index.html") Documentation
+          a.footer__link(href="index.html") Community
+          a.footer__link(href="index.html") Get in Touch
       section.footer__block
         .footer__block__header
           h3 Subscribe to out newsletter
